--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html>
-    <title>
+    <head>
         <title> Etch-a-Sketch </title>
         <link rel="stylesheet" type="text/css" href="style.css">
-    </title>
+    </head>
     <body>
-        
+        <div class="cont">
+            <!-- Insert square divs here using JS -->
+        </div>
         <script src="app.js"></script>
     </body>
 </html>
