--- a/index.html
+++ b/index.html
@@ -3,8 +3,12 @@
     <head>
         <title> Etch-a-Sketch </title>
         <link rel="stylesheet" type="text/css" href="style.css">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
+
+        <h1 class="title">Etch-a-Sketch</h1>
+        <button>Set Size</button>
         <div class="cont">
             <!-- Insert square divs here using JS -->
         </div>
