initial prompt for new size

--- a/index.html
+++ b/index.html
@@ -7,10 +7,14 @@
     </head>
     <body>
 
-        <h1 class="title">Etch-a-Sketch</h1>
-        <button>Set Size</button>
-        <div class="cont">
-            <!-- Insert square divs here using JS -->
+        <div class="container">
+            <div class="btnCont">
+                <button class="size" onclick="setSize()">Set Size</button>
+            </div>
+            <h1 class="title">Etch-a-Sketch</h1>
+            <div class="cont-sqr">
+                <!-- Insert square divs here using JS -->
+            </div>
         </div>
 
 
