--- a/index.html
+++ b/index.html
@@ -9,13 +9,20 @@
 
         <div class="container">
             <div class="btnCont">
-                <button class="size" onclick="setSize()">Set Size</button>
+                <button class="resizeBtn" onclick="setSize()">Set Size</button>
             </div>
             <h1 class="title">Etch-a-Sketch</h1>
             <div class="cont-sqr">
                 <!-- Insert square divs here using JS -->
             </div>
+<!-- 
+            <div class="color-selection">
+                <button class="red">Red</span>
+                <button class="Blue">Blue</span>
+            </div> -->
         </div>
+
+
 
 
         <script src="app.js"></script>
